<resources>
    <string name="app_name">Loan Calculator</string>
    <string name="vehicle_price">Vehicle Price</string>
    <string name="downpayment">Downpayment</string>
    <string name="repayment">Repayment period(month)</string>
    <string name="interest_rate">Interest Rate(%)</string>
    <string name="salary">Salary</string>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>
    <string name="monthly_payment">Monthly payment:</string>
    <string name="status">Status:</string>
    <string name="close">Close</string>
    <string name="approve">Approved</string>
    <string name="reject">Reject</string>
</resources>
